--- a/assets/style.css
+++ b/assets/style.css
@@ -114,3 +114,23 @@ button {
 		border-color: var(--color-1);
 	}
 }
+
+textarea {
+	color: var(--color-2);
+	background: var(--background-1);
+	border: 1px solid var(--border-2);
+	width: 30%;
+	font-size: 14px;
+}
+
+body > div:nth-child(1) {
+	flex-direction: row;
+	column-gap: var(--gap-1);
+	width: 90%;
+	height: auto;
+	max-height: 70%;
+}
+
+canvas {
+	width: 70%;
+}
