--- a/assets/style.css
+++ b/assets/style.css
@@ -89,10 +89,13 @@ body > div > div > a {
 }
 
 body > div > div {
-	background-image: var(--background-2);
-	border: 1px solid var(--border-2);
 	padding: calc(var(--gap-1) / 2);
 	width: 100%;
+}
+
+body > div > div:nth-child(2) {
+	background-image: var(--background-2);
+	border: 1px solid var(--border-2);
 }
 
 body > div > div {
@@ -100,8 +103,8 @@ body > div > div {
 	flex-direction: row;
 	justify-content: start;
 	align-items: center;
-	column-gap: var(--gap-1);
-	row-gap: var(--gap-1);
+	column-gap: calc(var(--gap-1) / 2);
+	row-gap: calc(var(--gap-1) / 2);
 	flex-wrap:  wrap;
 }
 
@@ -119,21 +122,30 @@ button {
 }
 
 body > div > div:nth-child(3) > button {
-	padding: 4px 4px;
+	padding: 4px 10px;
 }
 
 body > div > div:nth-child(4) {
 	background: var(--background-0);
-	border: none;
-}
-
-body > div > div:nth-child(4) > div {
-	border: 1px solid var(--border-1);
-	background: var(--background-2);
-	padding: var(--gap-1);
-	column-gap: var(--gap-1);
 	display: flex;
 	flex-direction: row;
+}
+
+body > div > div:nth-child(4) > div:nth-child(3) {
+	border: 1px solid var(--border-1);
+	background: var(--background-2);
+	padding: calc(var(--gap-1) / 2);
+	column-gap: calc(var(--gap-1) /2);
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+
+body > div > div:nth-child(4) > div:nth-child(4) {
+	display: flex;
+	flex-direction: row;
+	column-gap: calc(var(--gap-1));
+	align-items: center;
 }
 
 textarea {
