--- a/assets/style.css
+++ b/assets/style.css
@@ -176,3 +176,18 @@ canvas {
 	width: 70%;
 	max-height: 70vh;
 }
+
+@media screen and (max-width: 1300px), screen and (max-height: 900px) {
+	body > div:nth-child(1) {
+		flex-direction: column;
+		border: 1px solid red;
+		width: 100%;
+	}
+	canvas {
+		width: 100%;
+	}
+	textarea {
+		width: 100%;
+	}
+	
+}
